Update + Refactor